fixtures/grammar/reject/duplicate-key.fm
---
value: first
value: second
---
Vera Example
